Fix overflowing text on home

--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -27,6 +27,7 @@ div.app-container
         @media only screen and (max-width: 500px)
         {
             max-width: 33%;
+            overflow: visible;
         }
 
         img
